Fix z-index on the footer

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ footer {
     opacity: 0.8;
     font-size: 8pt;
     font-family: Menlo, Consolas, monospace;
+    z-index: 1;
 }
 
 footer.abs {
@@ -120,6 +121,7 @@ footer .footer-txt {
     width: 100%;
     bottom: 0px;
     right: 0px;
+    z-index: 1;
 }
 
 #explore_btn {
@@ -212,6 +214,15 @@ footer .footer-txt {
     box-shadow: 0px 0px 8px rgba(0,0,0,0.25);
     border-top: 2px solid white;
 }
+
+#explore_panel.open {
+    z-index: 1;
+}
+
+#explore_panel.closed {
+    z-index: 5;
+}
+
 
 #explore_panel .explore_panel_container {
     margin: 10px;
